--- a/BitcoinRouletteServer/.classpath
+++ b/BitcoinRouletteServer/.classpath
@@ -4,5 +4,16 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/BitcoinRouletteLibrary"/>
 	<classpathentry kind="lib" path="/usr/lib/jvm/java-8-oracle/db/lib/derbyclient.jar"/>
+	<classpathentry kind="lib" path="lib/postgresql-9.4-1200.jdbc41.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/hibernate-commons-annotations-4.0.5.Final.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/hibernate-core-4.3.8.Final.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/jandex-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/jboss-logging-3.1.3.GA.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/jboss-logging-annotations-1.2.0.Beta1.jar"/>
+	<classpathentry kind="lib" path="lib/Hibernate/jboss-transaction-api_1.2_spec-1.0.0.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
